--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: "poppins", sans-serif;
 }
 .search-field {
   border: none;
