--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-*{
-  /* overflow-x: hidden; */
-  font-family: "poppins", sans-serif;
+* {
+  overflow-x: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 .search-field {
   border: none;
@@ -14,7 +14,7 @@
 }
 .search-box {
   border: 1px solid rgb(3, 118, 211);
-  width: 276px;
+  width: 281px;
   border-radius: 5px;
   margin: auto;
   margin-top: 50px;
@@ -23,7 +23,7 @@
 .search-button {
   padding: 10px 50px;
   border-radius: 25px;
-  margin-left: -20px;
+  margin-left: 20px;
 }
 #all-products {
   display: grid;
@@ -36,22 +36,21 @@
   justify-content: center;
 }
 .single-product {
+  height: 600px;
   padding: 10px;
   transition: 0.6s;
-  height: 600px;
-  width: 300px;
-  margin: 20px;
-  color: rgb(0, 0, 0);
-  background-color: rgb(226, 255, 255);
-
+  margin: 10px 5px;
+   border-radius: 10px;
+   border: 1px solid 
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
-  border-radius: 10px;
-  border: 1px solid cyan;
+  box-shadow: 4px 4px 7px cyan;
 
-
-
+}
+#modal-img{
+  height: 300px;
+  width: 400px;
+  margin-left: 30px;
 }
 .product-image {
   width: 150px;
